# protobuf_cpp_python_implementation

./: .gitignore  CMakeLists.txt  README.md  setup.sh
proto/: message.proto
scripts/: communication.py  message_pb2.py
src/: communication.cpp  message.pb.h
tests/: test.cpp
